@@ -5,7 +5,8 @@ import dolphinarium.entities.foods.Food;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+
+import static dolphinarium.common.ExceptionMessages.*;
 
 public abstract class BasePool implements Pool {
     private String name;
@@ -14,49 +15,58 @@ public abstract class BasePool implements Pool {
     private Collection<Dolphin> dolphins;
 
     protected BasePool(String name, int capacity) {
-        this.setName(name);
+        setName(name);
         this.capacity = capacity;
         this.foods = new ArrayList<>();
         this.dolphins = new ArrayList<>();
     }
 
-    public String getName() {
-        return name;
-    }
-
     private void setName(String name) {
-        if (name == null || name.trim().isEmpty()) {
-            throw new NullPointerException("Pool name cannot be null or empty.");
+        if (name == null || name.isBlank()) {
+            throw new NullPointerException(POOL_NAME_NULL_OR_EMPTY);
         }
         this.name = name;
     }
 
+    @Override
+    public String getName() {
+        return name;
+    }
+
+    @Override
     public int getCapacity() {
         return capacity;
     }
 
-    public Collection<Food> getFoods() {
-        return Collections.unmodifiableCollection(foods);
-    }
-
+    @Override
     public Collection<Dolphin> getDolphins() {
-        return Collections.unmodifiableCollection(dolphins);
+        return dolphins;
     }
 
+    @Override
+    public Collection<Food> getFoods() {
+        return foods;
+    }
+
+    @Override
     public void addDolphin(Dolphin dolphin) {
         if (dolphins.size() >= capacity) {
-            throw new IllegalStateException("Not enough capacity.");
+            throw new IllegalStateException(NOT_ENOUGH_CAPACITY);
         }
+
         if (dolphin.getEnergy() <= 0) {
-            throw new IllegalArgumentException("Dolphin energy cannot be below or equal to 0.");
+            throw new IllegalArgumentException(DOLPHIN_ENERGY_BELOW_OR_EQUAL_ZERO);
         }
+
         dolphins.add(dolphin);
     }
 
+    @Override
     public void removeDolphin(Dolphin dolphin) {
         dolphins.remove(dolphin);
     }
 
+    @Override
     public void addFood(Food food) {
         foods.add(food);
     }
